cmake_minimum_required(VERSION 3.29)
project(Function C)

set(CMAKE_C_STANDARD 11)

add_executable(Function main.c
        Problem1.c
        Problem2.c
        Problem3.c
        Problem4.c
        Problem5.c
        Problem6.c
        Problem7.c
        Problem8.c
        Problem9.c
        Problem10.c
        Problem11.c
        Problem12.c)
add_executable(Problem1 Problem1.c)
add_executable(Problem2 Problem2.c)
add_executable(Problem3 Problem3.c)
add_executable(Problem4 Problem4.c)
add_executable(Problem5 Problem5.c)
add_executable(Problem6 Problem6.c)
add_executable(Problem7 Problem7.c)
add_executable(Problem8 Problem8.c)
add_executable(Problem9 Problem9.c)
add_executable(Problem10 Problem10.c)
add_executable(Problem11 Problem11.c)
add_executable(Problem12 Problem12.c)

